--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -13,13 +13,13 @@
 .\" IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 .\" WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.\"	@(#)ifconfig.8	6.7 (Berkeley) 04/22/89
+.\"	@(#)ifconfig.8	6.8 (Berkeley) 02/13/90
 .\"
 .TH IFCONFIG 8 ""
 .UC 5
 .SH NAME
 ifconfig \- configure network interface parameters
-.SH SYOPNSIS
+.SH SYNOPSIS
 .B /etc/ifconfig
 interface address_family
 [
