--- a/lib/libc/sys/chflags.2
+++ b/lib/libc/sys/chflags.2
@@ -13,7 +13,7 @@
 .\" IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 .\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.\"	@(#)chflags.2	6.1 (Berkeley) 06/06/89
+.\"	@(#)chflags.2	6.2 (Berkeley) 03/07/90
 .\"
 .TH CHFALGS 2 ""
 .UC 7
@@ -85,7 +85,7 @@ points outside the process's allocated address space.
 [EIO]
 An I/O error occurred while reading from or writing to the file system.
 .PP
-.I Fchmod
+.I Fchflags
 will fail if:
 .TP 15
 [EBADF]
