--- a/old/tar/tar.1
+++ b/old/tar/tar.1
@@ -1,4 +1,4 @@
-.\"	@(#)tar.1	6.6 (Berkeley) 05/23/88
+.\"	@(#)tar.1	6.7 (Berkeley) 04/03/90
 .\"
 .TH TAR 1 ""
 .AT 3
@@ -169,7 +169,7 @@ inability to properly handle blocked archives have been lifted.
 .br
 /tmp/tar*
 .SH "SEE ALSO"
-tar(5)
+tar.format(5)
 .SH DIAGNOSTICS
 Complaints about bad key characters and tape read/write errors.
 .br
