--- a/share/me/me.7
+++ b/share/me/me.7
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1980 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)me.7	6.3 (Berkeley) 05/06/86
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)me.7	6.4 (Berkeley) 04/13/90
 .\"
 .hc %
 .TH ME 7 ""
