--- a/usr.bin/msgs/msgs.1
+++ b/usr.bin/msgs/msgs.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1980 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)msgs.1	6.3 (Berkeley) 05/09/86
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)msgs.1	6.4 (Berkeley) 05/06/90
 .\"
 .TH MSGS 1 ""
 .UC 4
