--- a/usr.bin/yacc/yyfix.1
+++ b/usr.bin/yacc/yyfix.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)yyfix.1	5.1 (Berkeley) 05/12/90
+.\"	@(#)yyfix.1	5.2 (Berkeley) 05/12/90
 .\"
 .TH YYFIX 1 ""
 .UC 7
@@ -42,8 +42,8 @@ from historical versions of
 .IR yacc .
 .PP
 The tables ``yylhs'', ``yylen'', ``yydefred'', ``yydgoto'', ``yysindex'',
-``yyrindex'', ``yygindex'', ``yytable'' and ``yycheck'' are extracted
-from the current version of
+``yyrindex'', ``yygindex'', ``yytable'', ``yyname'', ``yyrule'' and
+``yycheck'' are extracted from the current version of
 .IR yacc .
 .SH FILES
 y.tab.c		File from which tables are extracted.
