--- a/lib/libc/stdlib/exit.3
+++ b/lib/libc/stdlib/exit.3
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)exit.3	6.3 (Berkeley) 05/16/90
+.\"	@(#)exit.3	6.4 (Berkeley) 05/17/90
 .\"
 .TH EXIT 3 ""
 .UC 5
@@ -12,6 +12,9 @@ exit \- perform normal program termination
 .SH SYNOPSIS
 .nf
 .ft B
+#include <stdlib.h>
+
+void
 exit(status)
 int status;
 .fi
