fix copyright and condition notice for new sccs include

--- a/lib/libc/sys/recv.2
+++ b/lib/libc/sys/recv.2
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1983, 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.c%
+.\" %sccs.include.redist.man%
 .\"
-.\"	@(#)recv.2	6.7 (Berkeley) 05/30/90
+.\"	@(#)recv.2	6.8 (Berkeley) 05/30/90
 .\"
 .TH RECV 2 ""
 .UC 5
