--- a/usr.bin/lorder/lorder.1
+++ b/usr.bin/lorder/lorder.1
@@ -13,7 +13,7 @@
 .\" IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 .\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.\"	@(#)lorder.1	6.2 (Berkeley) 03/20/90
+.\"	@(#)lorder.1	6.3 (Berkeley) 06/01/90
 .\"
 .TH LORDER 1 ""
 .UC 4
@@ -36,7 +36,7 @@ which is defined by the second file.
 .PP
 The output is normally used with 
 .IR tsort (1)
-when a libarary is created to determine the optimum ordering of the
+when a library is created to determine the optimum ordering of the
 object modules so that all references may be resolved in a single
 pass of the loader.
 .SH EXAMPLES
