Berkeley copyright notice, written by Bill Joy

--- a/usr.bin/xstr/xstr.1
+++ b/usr.bin/xstr/xstr.1
@@ -1,9 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1980 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)xstr.1	6.2 (Berkeley) 05/07/86
+.\" %sccs.include.redist.man%
 .\"
+.\"	@(#)xstr.1	6.3 (Berkeley) 06/06/90
 .TH XSTR 1 ""
 .UC
 .SH NAME
