--- a/share/man/man7/mdoc.samples.7
+++ b/share/man/man7/mdoc.samples.7
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.mdoc%
+.\" %sccs.include.redist.man%
 .\"
-.\"     @(#)mdoc.samples.7	5.1 (Berkeley) 06/22/90
+.\"     @(#)mdoc.samples.7	5.2 (Berkeley) 06/22/90
 .\"
 .\"	This sampler invokes every macro in the package several
 .\" 	times and is garanteed to give a worst case performance
