--- a/share/man/man4/netintro.4
+++ b/share/man/man4/netintro.4
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)netintro.4	6.8 (Berkeley) 05/30/90
+.\"	@(#)netintro.4	6.9 (Berkeley) 06/23/90
 .\"
 .TH NETINTRO 4 ""
 .UC 5
@@ -88,7 +88,7 @@ a system description to the
 program.
 The DIAGNOSTICS section lists messages which may appear on the console
 and/or in the system error log,
-.I /usr/adm/messages
+.I /var/log/messages
 (see
 .IR syslogd (8)),
 due to errors in device operation.
