--- a/usr.bin/tn3270/mset/map3270.5
+++ b/usr.bin/tn3270/mset/map3270.5
@@ -1,19 +1,9 @@
 .\" Copyright (c) 1986 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" Redistribution and use in source and binary forms are permitted
-.\" provided that the above copyright notice and this paragraph are
-.\" duplicated in all such forms and that any documentation,
-.\" advertising materials, and other materials related to such
-.\" distribution and use acknowledge that the software was developed
-.\" by the University of California, Berkeley.  The name of the
-.\" University may not be used to endorse or promote products derived
-.\" from this software without specific prior written permission.
-.\" THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
-.\" IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-.\" WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+.\" %sccs.include.redist.man%
 .\"
-.\"	@(#)map3270.5	4.3 (Berkeley) 04/17/89
+.\"	@(#)map3270.5	4.4 (Berkeley) 06/23/90
 .\"
 .TH MAP3270 5  ""
 .UC 6
