--- a/lib/libc/string/strcoll.3
+++ b/lib/libc/string/strcoll.3
@@ -6,12 +6,12 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)strcoll.3	5.1 (Berkeley) 05/15/90
+.\"	@(#)strcoll.3	5.2 (Berkeley) 06/24/90
 .\"
 .TH STRCOLL 3 ""
 .UC 4
 .SH NAME
-strcmp \- compare strings according to current collation
+strcoll \- compare strings according to current collation
 .SH SYNOPSIS
 .nf
 .ft B
