--- a/lib/libc/string/memccpy.3
+++ b/lib/libc/string/memccpy.3
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)memccpy.3	5.1 (Berkeley) 05/15/90
+.\"	@(#)memccpy.3	5.2 (Berkeley) 06/24/90
 .\"
 .TH MEMCCPY 3 ""
 .UC 7
@@ -37,4 +37,4 @@ Otherwise,
 .I len
 bytes are copied, and a NULL pointer is returned.
 .SH SEE ALSO
-bcopy(3), memcpy(3), memmove(3), strcpy(3), strncpy(3)
+bcopy(3), memcpy(3), memmove(3), strcpy(3)
