--- a/bin/cat/cat.1
+++ b/bin/cat/cat.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)cat.1	6.8 (Berkeley) 06/11/90
+.\"     @(#)cat.1	6.9 (Berkeley) 06/24/90
 .\"
 .Dd 
 .Dt CAT 1
@@ -70,7 +70,7 @@ newly sorted data in file3.
 .Pp
 Because of the shell language mechanism used to perform output
 redirection, the command ``cat file1 file 2 > file1'' will cause
-.P original data in file1 to be destroyed!
+the original data in file1 to be destroyed!
 .Pp
 .Nm Cat
 The cat utility exits 0 on success, and >0 if an error
