--- a/usr.bin/mail/mail.1
+++ b/usr.bin/mail/mail.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)mail.1	6.14 (Berkeley) 06/11/90
+.\"     @(#)mail.1	6.15 (Berkeley) 06/24/90
 .\"
 .Dd 
 .Dt MAIL 1
@@ -77,7 +77,7 @@ for processing; when you
 writes undeleted messages back to this file.
 .Tp Fl u
 Is equivalent to:
-.Dl mail -f /usr/spool/mail/user
+.Dl mail -f /var/spool/mail/user
 .Tp
 .Ss Sending mail
 To send a message to one or more people,
