--- a/usr.bin/mkstr/mkstr.1
+++ b/usr.bin/mkstr/mkstr.1
@@ -1,10 +1,11 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1980, 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)mkstr.1	6.2 (Berkeley) 05/07/86
+.\" %sccs.include.redist.man%
 .\"
-.TH MKSTR 1 ""
+.\"     @(#)mkstr.1	6.3 (Berkeley) 06/24/90
+.\"
+.TH MKSTR 1 "%Q"
 .UC
 .SH NAME
 mkstr \- create an error message file by massaging C source
