--- a/usr.bin/rsh/rsh.1
+++ b/usr.bin/rsh/rsh.1
@@ -1,15 +1,11 @@
 .\" Copyright (c) 1983, 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-%sccs.include.redist.man%
+.\" %sccs.include.redist.man%
 .\"
-.\"	@(#)rsh.1	6.6 (Berkeley) 04/09/90
+.\"     @(#)rsh.1	6.7 (Berkeley) 06/24/90
 .\"
-.\" $Source: /mit/kerberos/src/man/RCS/rsh.1,v $
-.\" $Author: jtkohl $
-.\" $Header: rsh.1,v 4.1 89/01/23 11:39:11 jtkohl Exp $
-.\"
-.TH RSH 1 ""
+.TH RSH 1 "%Q"
 .UC 5
 .SH NAME
 rsh \- remote shell
