--- a/usr.bin/shar/shar.1
+++ b/usr.bin/shar/shar.1
@@ -3,9 +3,9 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)shar.1	5.1 (Berkeley) 05/23/90
+.\"     @(#)shar.1	5.2 (Berkeley) 06/24/90
 .\"
-.TH SHAR 1 ""
+.TH SHAR 1 "%Q"
 .UC 7
 .SH NAME
 shar \- create a shell archive of files
