--- a/bin/cat/cat.1
+++ b/bin/cat/cat.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)cat.1	6.9 (Berkeley) 06/24/90
+.\"     @(#)cat.1	6.10 (Berkeley) 06/24/90
 .\"
 .Dd 
 .Dt CAT 1
@@ -73,7 +73,7 @@ redirection, the command ``cat file1 file 2 > file1'' will cause
 the original data in file1 to be destroyed!
 .Pp
 .Nm Cat
-The cat utility exits 0 on success, and >0 if an error
+utility exits 0 on success, and >0 if an error
 occurs.
 .Sh SEE ALSO
 .Xr head 1 ,
