converted man page

--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -3,11 +3,11 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)find.1	6.13 (Berkeley) 06/11/90
+.\"     @(#)find.1	6.14 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt FIND 1
-.Os ATT 7th
+.Os BSD 4.4
 .Sh NAME
 .Nm find
 .Nd walk a file hierarchy
