--- a/bin/ed/ed.1
+++ b/bin/ed/ed.1
@@ -1,9 +1,8 @@
-.\" Copyright (c) 1990 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1990 Regents of the University of California.
+.\" All rights reserved.  The Berkeley software License Agreement
+.\" specifies the terms and conditions for redistribution.
 .\"
-.\" %sccs.include.redist.man%
-.\"
-.\"     @(#)ed.1	6.3 (Berkeley) 06/11/90
+.\"     @(#)ed.1	6.4 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt ED 1
