--- a/old/adb/common_source/adb.1
+++ b/old/adb/common_source/adb.1
@@ -1,9 +1,8 @@
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.
+.\" All rights reserved.  The Berkeley software License Agreement
+.\" specifies the terms and conditions for redistribution.
 .\"
-.\" %sccs.include.redist.man%
-.\"
-.\"     @(#)adb.1	5.7 (Berkeley) 06/11/90
+.\"     @(#)adb.1	5.8 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt ADB 1
