--- a/old/pcc/cc/cc.1
+++ b/old/pcc/cc/cc.1
@@ -1,9 +1,8 @@
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.
+.\" All rights reserved.  The Berkeley software License Agreement
+.\" specifies the terms and conditions for redistribution.
 .\"
-.\" %sccs.include.redist.man%
-.\"
-.\"     @(#)cc.1	6.4 (Berkeley) 06/11/90
+.\"     @(#)cc.1	6.5 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt CC 1
