--- a/usr.bin/col/col.1
+++ b/usr.bin/col/col.1
@@ -6,11 +6,11 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)col.1	6.4 (Berkeley) 06/11/90
+.\"     @(#)col.1	6.5 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt COL 1
-.Os ATT 7
+.Os BSD 4.4
 .Sh NAME
 .Nm col
 .Nd filter reverse line feeds from input
