--- a/old/sh/sh.1
+++ b/old/sh/sh.1
@@ -1,9 +1,8 @@
-.\" Copyright (c) 1990 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1990 Regents of the University of California.
+.\" All rights reserved.  The Berkeley software License Agreement
+.\" specifies the terms and conditions for redistribution.
 .\"
-.\" %sccs.include.redist.man%
-.\"
-.\"     @(#)sh.1	6.4 (Berkeley) 06/11/90
+.\"     @(#)sh.1	6.5 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt SH 1
