--- a/usr.bin/look/look.1
+++ b/usr.bin/look/look.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)look.1	6.2 (Berkeley) 06/24/90
+.\" %sccs.include.redist.man%
+.\"
+.\"     @(#)look.1	6.3 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt LOOK 1
