--- a/usr.bin/netstat/netstat.1
+++ b/usr.bin/netstat/netstat.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)netstat.1	6.9 (Berkeley) 06/11/90
+.\"     @(#)netstat.1	6.10 (Berkeley) 06/26/90
 .\"
 .Dd 
 .Dt NETSTAT 1
@@ -14,7 +14,7 @@
 .Sh SYNOPSIS
 .Nm netstat
 .Op Fl Aan
-.Op .Fl f Ar address_family
+.Op Fl f Ar address_family
 .Op Ar system
 .Op Ar core
 .Nm netstat
