--- a/usr.bin/colrm/colrm.1
+++ b/usr.bin/colrm/colrm.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)colrm.1	6.4 (Berkeley) 06/11/90
+.\"     @(#)colrm.1	6.5 (Berkeley) 07/24/90
 .\"
 .Dd 
 .Dt COLRM 1
@@ -13,10 +13,7 @@
 .Nd remove columns from a file
 .Sh SYNOPSIS
 .Nm colrm
-.Cx [ startcol
-.Op endcol
-.Cx ]
-.Cx
+.Op Ar startcol Op Ar endcol
 .Sh DESCRIPTION
 .Nm Colrm
 removes selected columns from a file.  Input is taken from standard input.
