--- a/usr.bin/indent/indent.1
+++ b/usr.bin/indent/indent.1
@@ -5,7 +5,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)indent.1	6.7 (Berkeley) 06/11/90
+.\"     @(#)indent.1	6.8 (Berkeley) 07/24/90
 .\"
 .Dd 
 .Dt INDENT 1
@@ -480,9 +480,9 @@ environment variable.
 .Sh FILES
 .Dw \&./.indent.pro
 .Di L
-.Dp \&./.indent.pro
+.Dp Pa \&./.indent.pro
 profile file
-.Dp ~/.indent.pro
+.Dp Pa ~/.indent.pro
 profile file
 .Dp
 .Sh HISTORY
