fixed missing operator

--- a/share/man/man7/operator.7
+++ b/share/man/man7/operator.7
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)operator.7	5.2 (Berkeley) 06/24/90
+.\"     @(#)operator.7	5.3 (Berkeley) 08/31/90
 .\"
 .Dd 
 .Dt OPERATOR 7
@@ -25,9 +25,9 @@
 .Cl \&== !=	left to right
 .Cl \&&	left to right
 .Cl \&^	left to right
-.Cl \&left to right
+.Cl \&|	left to right
 .Cl \&&&	left to right
-.Cl \&left to right
+.Cl \&||	left to right
 .Cl \&?:	right to left
 .Cl \&= += -= etc.	right to left
 .Cl \&,	left to right
