dmconf -> dm.conf

--- a/games/dm/dm.conf.5
+++ b/games/dm/dm.conf.5
@@ -3,9 +3,9 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)dm.conf.5	5.6 (Berkeley) 06/26/90
+.\"	@(#)dm.conf.5	5.7 (Berkeley) 09/30/90
 .\"
-.TH DMCONF 5 ""
+.TH DM.CONF 5 ""
 .UC 5
 .SH NAME
 dm.conf \- dm configuration file
