--- a/lib/libc/db/man/dbopen.3
+++ b/lib/libc/db/man/dbopen.3
@@ -3,12 +3,12 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)dbopen.3	5.1 (Berkeley) 08/27/90
+.\"	@(#)dbopen.3	5.2 (Berkeley) 10/24/90
 .\"
 .TH DB 3  ""
 .UC 7
 .SH NAME
-btree_open, flat_open, hash_open \- database manipulation routines
+btree_open, hash_open, recno_open \- database manipulation routines
 .SH SYNOPSIS
 .nf
 .ft B
@@ -18,21 +18,20 @@ DB *
 btree_open(const char *file, int flags, int mode, const BTREEINFO * private);
 
 DB *
-flat_open(const char *file, int flags, int mode, const FLATINFO * private);
+hash_open(const char *file, int flags, int mode, const HASHINFO * private);
 
 DB *
-hash_open(const char *file, int flags, int mode, const HASHINFO * private);
+recno_open(const char *file, int flags, int mode, const RECNOINFO * private);
 .ft R
 .fi
 .SH DESCRIPTION
 .IR Btree_open ,
-.IR flat_open ,
+.IR hash_open ,
 and
-.I hash_open
-are interfaces, respectively, to database files in btree, flat,
-and hashed record formats.
-Access to all file types is based on key/data pairs, where both keys
-and data are of essentially unlimited size.
+.I recno_open
+are interfaces, respectively, to database files in btree, hashed, and
+flat-file record formats.
+Access to all file types is based on key/data pairs.
 .PP
 Each routine opens
 .I file
@@ -52,28 +51,36 @@ The argument
 is a pointer to a private, access-method specific structure described
 below.
 .PP
-The open routines return a pointer to a structure representing the
-database on success and NULL on error.
-This structure is as follows:
+The open routines return a pointer to a structure on success and NULL
+on error.
+This structure is defined as follows:
 .sp
 typedef struct {
 .RS
-void *internal;
+void *private;
+.br
+int cachesize;
 .br
 int (*close)(), (*delete)(), (*get)(), (*put)(), (*seq)(), (*sync)();
 .RE
 } DB;
 .sp
 .PP
-This structure is as follows:
+The elements of this structure are defined as follows:
 .TP
-internal
+private
 A pointer to an internal structure private to the access method.
+.TP
+cachesize;
+A suggested maximum size of the memory cache used by the access method.
+Access methods are
+.B not
+constrained by this value.
 .TP
 close
 A pointer to a routine to flush any cached information to disk, free any
-allocated resources, and close the database file, whose function prototype
-is:
+allocated resources, and close the database file.
+Its function prototype is:
 .sp
 .in +5
 close(const DB *db);
@@ -88,8 +95,8 @@ The
 routine returns 0 on error and 1 on success.
 .TP
 delete
-A pointer to a routine to remove key/data pairs from the database,
-whose function prototype is:
+A pointer to a routine to remove key/data pairs from the database.
+Its function prototype is:
 .sp
 .in +5
 delete(const DB *db, const VALUE *key);
@@ -103,7 +110,8 @@ was not in the file.
 .TP
 get
 A pointer to a routine which is the interface for keyed retrieval from
-the database, whose function prototype is:
+the database.
+Its function prototype is:
 .sp
 .in +5
 get(const DB *db, const VALUE *key, VALUE *data);
@@ -120,8 +128,8 @@ routine returns 0 on error, 1 on success, and -1 if the
 was not in the file.
 .TP
 put
-A pointer to a routine to store key/data pairs in the database,
-whose function prototype is:
+A pointer to a routine to store key/data pairs in the database.
+Its function prototype is:
 .sp
 .in +5
 put(const DB *db, const VALUE *key, const VALUE *data, u_long flag);
@@ -139,7 +147,7 @@ Append the data immediately after the data referenced by
 creating a new record.
 (This implies that the access method is able to create new keys itself,
 i.e. the keys are ordered and independent, for example, record numbers.
-Currently applicable only to the flat file access method.)
+Currently applicable only to the recno access method.)
 .TP
 R_INSERT
 Insert the data immediately before the data referenced by
@@ -147,7 +155,7 @@ Insert the data immediately before the data referenced by
 creating a new record.
 (This implies that the access method is able to create new keys itself,
 i.e. the keys are ordered and independent, for example, record numbers.
-Currently applicable only to the flat file access method.)
+Currently applicable only to the recno access method.)
 .TP
 R_NOOVERWRITE
 Enter the new key/data pair only if the key does not previously exist.
@@ -162,7 +170,8 @@ is set and the key already exists in the file.
 .TP
 seq
 A pointer to a routine which is the interface for sequential
-retrieval from the database, whose function prototype is:
+retrieval from the database.
+Its function prototype is:
 .sp
 .in +5
 seq(const DB *db, VALUE *key, VALUE *data, int flag);
@@ -208,8 +217,8 @@ and -2 if the input is a character device and no complete records are
 available.
 .TP
 sync
-A pointer to a routine to flush any cached information to disk,
-whose function prototype is:
+A pointer to a routine to flush any cached information to disk.
+Its function prototype is:
 .sp
 .in +5
 sync(const DB *db);
@@ -234,9 +243,9 @@ u_char *data;
 .br
 size_t size;
 .RE
-} ENTRY;
+} DBT;
 .PP
-The elements of this structure are as follows:
+The elements of this structure are defined as follows:
 .TP
 data
 A pointer to a byte string.
@@ -263,7 +272,7 @@ int pagesize;
 .RE
 } BTREEINFO;
 .PP
-The elements of this structure are as follows:
+The elements of this structure are defined as follows:
 .TP
 flags
 The flag value is specified by
@@ -299,7 +308,7 @@ u_long (*hash)(const void *, const size_t);
 .RE
 } HASHINFO;
 .PP
-The elements of this structure are as follows:
+The elements of this structure are defined as follows:
 .TP
 flags
 The flag value is specified by
@@ -359,32 +368,35 @@ If a hash function is specified,
 will attempt to determine if the hash function specified is the same as
 the one with which the database was created, and will fail if it is not.
 .PP
+Both key and data structures may reference byte strings of essentially
+unlimited length.
+.PP
 Backward compatible interfaces to the routines described in
 .IR dbm (3),
 .IR hsearch (3),
 and
 .IR ndbm (3)
 are provided as part of the compatibility library, ``libcompat.a''.
-.SH "FLAT FILES"
+.SH RECNO
 One of the access methods is either variable or fixed-length records,
 the former delimited by a specific byte value.
 The private data structure provided to
-.I flat_open
+.I recno_open
 is as follows:
 .sp
 typedef struct {
 .RS
 u_long flags;
 .br
-int cachesize;
+u_int cachesize;
 .br
 size_t reclen;
 .br
 u_char bval;
 .RE
-} VLENINFO;
+} RECNOINFO;
 .PP
-The elements of this structure are as follows:
+The elements of this structure are defined as follows:
 .TP
 flags
 The flag value is specified by
@@ -406,7 +418,8 @@ the primary cache, and to minimize any caching they do.
 .RE
 .TP
 cachesize
-The amount of memory to be used as a data cache.
+The amount of memory to be used as a data cache, expressed as a number
+of bytes.
 .TP
 reclen
 The length of a fixed-length record.
@@ -441,6 +454,8 @@ The byte offset is valid.
 .TP
 R_RECNO
 The record number is valid.
+.PP
+Data structures may reference byte strings of essentially unlimited length.
 .SH ERRORS
 The
 .I open
