--- a/usr.bin/m4/m4.1
+++ b/usr.bin/m4/m4.1
@@ -7,7 +7,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)m4.1	6.6 (Berkeley) 07/24/90
+.\"     @(#)m4.1	6.7 (Berkeley) 11/18/90
 .\"
 .Dd 
 .Dt M4 1
@@ -117,7 +117,10 @@ will subsequently be performed.
 .br
 change quote symbols to the first and second arguments.
 With no arguments, the quotes are reset back to the default
-characters. (i.e., \*`\\*').
+characters (i.e.,
+.Ic \*(ga
+and
+.Ic \*(aa ).
 .Tp Ic changecom
 .Ar changecom(lcchar, rcchar)
 .br
