get quotes around the string

--- a/bin/date/date.1
+++ b/bin/date/date.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)date.1	6.10 (Berkeley) 01/15/91
+.\"     @(#)date.1	6.11 (Berkeley) 01/19/91
 .\"
 .Dd 
 .Dt DATE 1
@@ -98,7 +98,7 @@ and years are handled automatically.
 .Sh EXAMPLES
 The command:
 .Pp
-.Dl date +DATE: %m/%d/%y%nTIME: %H:%M:%S\en
+.Dl date ``+DATE: %m/%d/%y%nTIME: %H:%M:0n''
 .Pp
 will display:
 .Pp
