dirent.h is in /usr/include, not /usr/include/sys

--- a/lib/libc/sys/getdirentries.2
+++ b/lib/libc/sys/getdirentries.2
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)getdirentries.2	6.2 (Berkeley) 06/23/90
+.\"	@(#)getdirentries.2	6.3 (Berkeley) 02/22/91
 .\"
 .TH GETDIRENTRIES 2 ""
 .UC 7
@@ -12,7 +12,7 @@ getdirentries \- get directory entries in a filesystem independent format
 .SH SYNOPSIS
 .nf
 .ft B
-#include <sys/dirent.h>
+#include <dirent.h>
 .LP
 .ft B
 cc = getdirentries(fd, buf, nbytes, basep)
