man page pass, minor cleanups

--- a/lib/libc/stdio/getc.3
+++ b/lib/libc/stdio/getc.3
@@ -6,7 +6,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)getc.3	6.4 (Berkeley) 01/20/91
+.\"	@(#)getc.3	6.5 (Berkeley) 03/05/91
 .\"
 .TH GETC 3 ""
 .UC 7
@@ -24,7 +24,7 @@ int
 getc(FILE *stream);
 
 int
-getchar()
+getchar();
 
 int
 getw(FILE *stream);
