--- a/usr.bin/kdump/kdump.1
+++ b/usr.bin/kdump/kdump.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)kdump.1	5.1 (Berkeley) 12/28/90
+.\"     @(#)kdump.1	5.2 (Berkeley) 03/07/91
 .\"
 .Dd 
 .Dt KDUMP 1
@@ -49,7 +49,7 @@ Normally
 tries to decode many system calls into a more human readable format.
 For example, ioctl values are replaced with the macro name and errno
 values are replaced with the
-.Li sys_errlist
+.Li strerror()
 string.
 Suppressing this feature yields a more consistent output format and is
 easily amenable to further processing.
