--- a/usr.bin/rsh/rsh.1
+++ b/usr.bin/rsh/rsh.1
@@ -3,8 +3,10 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)rsh.1	6.8.1.1 (Berkeley) 10/21/90
+.\"     @(#)rsh.1	6.9 (Berkeley) 03/14/91
 .\"
+.Vx
+.Vx
 .Dd 
 .Dt RSH 1
 .Os BSD 4.2
@@ -13,7 +15,7 @@
 .Nd remote shell
 .Sh SYNOPSIS
 .Ar rsh
-.Op Fl Kdn
+.Op Fl Kdnx
 .Op Fl k Ar realm
 .Op Fl l Ar username
 .Ar host
@@ -67,6 +69,11 @@ The
 option redirects input from the special device
 .Pa /dev/null
 (see the BUGS section of this manual page).
+.Tp Fl x
+The
+.Fl x
+option turns on DES encryption for all data exchange.
+This may introduce a significant delay in response time.
 .Tp
 .Pp
 If no
