--- a/lib/libcompat/4.3/lsearch.3
+++ b/lib/libcompat/4.3/lsearch.3
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"	@(#)lsearch.3	5.3 (Berkeley) 06/23/90
+.\"	@(#)lsearch.3	5.4 (Berkeley) 03/19/91
 .\"
 .TH LSEARCH 3 ""
 .UC 7
@@ -72,4 +72,4 @@ the location referenced by the argument
 .I nelp
 is incremented by one.
 .SH "SEE ALSO"
-bsearch(3), hsearch(3), tsearch(3)
+bsearch(3), db(3)
