--- a/old/adb/common_source/adb.1
+++ b/old/adb/common_source/adb.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)adb.1	5.9 (Berkeley) 07/24/90
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)adb.1	5.10 (Berkeley) 04/04/91
 .\"
 .Dd 
 .Dt ADB 1
