new copyright; att/bsd/shared

--- a/bin/expr/expr.1
+++ b/bin/expr/expr.1
@@ -1,4 +1,6 @@
-.\"	@(#)expr.1	6.1 (Berkeley) 04/29/85
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)expr.1	6.2 (Berkeley) 04/08/91
 .\"
 .TH EXPR 1 ""
 .AT 3
