--- a/old/tar/tarformat.5
+++ b/old/tar/tarformat.5
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1983 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)tarformat.5	6.2 (Berkeley) 11/07/85
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)tarformat.5	6.3 (Berkeley) 04/08/91
 .\"
 .TH TAR 5  ""
 .UC 5
