--- a/old/boggle/boggle.6
+++ b/old/boggle/boggle.6
@@ -1,15 +1,16 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)boggle.6	6.1 (Berkeley) 05/20/85
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)boggle.6	6.2 (Berkeley) 04/08/91
 .\"
 .TH BOGGLE 6 ""
 .UC 4
 .SH NAME
 boggle \- play the game of boggle
 .SH SYNOPSIS
-.B /usr/games/boggle
+.B boggle
 [
 .B +
 ] [
