new copyright; att/bsd/shared

--- a/games/ching/ching.6
+++ b/games/ching/ching.6
@@ -1,4 +1,6 @@
-.\"	@(#)ching.6	6.2 (Berkeley) 10/19/88
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)ching.6	6.3 (Berkeley) 04/08/91
 .\"
 .TH CHING 6  ""
 .AT 3
