new copyright; att/bsd/shared

--- a/games/quiz/quiz.6
+++ b/games/quiz/quiz.6
@@ -1,4 +1,6 @@
-.\"	@(#)quiz.6	6.1 (Berkeley) 05/20/85
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)quiz.6	6.2 (Berkeley) 04/08/91
 .\"
 .TH QUIZ 6  ""
 .AT 3
