--- a/local/kerberosIV/make_keypair/make_keypair.8
+++ b/local/kerberosIV/make_keypair/make_keypair.8
@@ -1,9 +1,9 @@
-.\" Copyright (c) 1980, 1991 Regents of the University of California.
+.\" Copyright (c) 1988 The Regents of the University of California.
 .\" All rights reserved.
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)make_keypair.8	1.2 (Berkeley) 03/16/91
+.\"	@(#)make_keypair.8	5.1 (Berkeley) 04/12/91
 .\"
 .Dd 
 .Dt MAKE_KEYPAIR 8
