--- a/usr.bin/f77/f77.vax/f77.1
+++ b/usr.bin/f77/f77.vax/f77.1
@@ -1,10 +1,10 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1991 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)f77.1	6.8 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.man%
 .\"
-.Vx
+.\"	@(#)f77.1	6.9 (Berkeley) 04/12/91
+.\"
 .Vx
 .Dd 
 .Dt F77 1
