--- a/old/ld/ld.1
+++ b/old/ld/ld.1
@@ -1,10 +1,10 @@
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"     @(#)ld.1	6.5 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.man%
 .\"
-.Vx
+.\"	@(#)ld.1	6.6 (Berkeley) 04/12/91
+.\"
 .Vx
 .Dd 
 .Dt LD 1
