--- a/old/ratfor/ratfor.1
+++ b/old/ratfor/ratfor.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1991 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)ratfor.1	6.5 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.man%
+.\"
+.\"	@(#)ratfor.1	6.6 (Berkeley) 04/16/91
 .\"
 .Vx
 .Vx
