--- a/usr.bin/struct/struct/struct.1
+++ b/usr.bin/struct/struct/struct.1
@@ -1,8 +1,6 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" %sccs.include.proprietary.man%
 .\"
-.\"     @(#)struct.1	6.2 (Berkeley) 06/24/90
+.\"	@(#)struct.1	6.3 (Berkeley) 04/16/91
 .\"
 .TH STRUCT 1 "%Q"
 .AT 3
