--- a/contrib/jove-4.14.6/USD.doc/jove.1
+++ b/contrib/jove-4.14.6/USD.doc/jove.1
@@ -1,4 +1,9 @@
-.\"	@(#)jove.1	6.1 (Berkeley) 05/30/86
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)jove.1	6.2 (Berkeley) 04/17/91
 .\"
 .\" ditroff -ms
 .de IQ
