new copyright; att/bsd/shared

--- a/share/me/me.7
+++ b/share/me/me.7
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1980 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"	@(#)me.7	6.4 (Berkeley) 04/13/90
+.\"	@(#)me.7	6.5 (Berkeley) 04/17/91
 .\"
 .hc %
 .TH ME 7 ""
