--- a/usr.bin/bc/bc.1
+++ b/usr.bin/bc/bc.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)bc.1	6.6 (Berkeley) 07/24/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)bc.1	6.7 (Berkeley) 04/17/91
 .\"
 .Dd 
 .Dt BC 1
