--- a/usr.bin/deroff/deroff.1
+++ b/usr.bin/deroff/deroff.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)deroff.1	6.4 (Berkeley) 07/24/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)deroff.1	6.5 (Berkeley) 04/17/91
 .\"
 .Dd 
 .Dt DEROFF 1
