--- a/usr.bin/ex/ex.1
+++ b/usr.bin/ex/ex.1
@@ -1,11 +1,10 @@
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.proprietary.roff%
 .\"
-.\"     @(#)ex.1	6.7 (Berkeley) 03/14/91
+.\"	@(#)ex.1	6.8 (Berkeley) 04/17/91
 .\"
-.Vx
 .Vx
 .Dd 
 .Dt EX 1
