--- a/usr.bin/ex/vi.1
+++ b/usr.bin/ex/vi.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1980 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)vi.1	6.1 (Berkeley) 04/29/85
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)vi.1	6.2 (Berkeley) 04/17/91
 .\"
 .TH VI 1 ""
 .UC
