--- a/usr.bin/graph/graph.1
+++ b/usr.bin/graph/graph.1
@@ -1,10 +1,10 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)graph.1	6.4 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.roff%
 .\"
-.Vx
+.\"	@(#)graph.1	6.5 (Berkeley) 04/17/91
+.\"
 .Vx
 .Dd 
 .Dt GRAPH 1
