--- a/usr.bin/learn/learn/learn.1
+++ b/usr.bin/learn/learn/learn.1
@@ -1,10 +1,10 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)learn.1	6.6 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.roff%
 .\"
-.Vx
+.\"	@(#)learn.1	6.7 (Berkeley) 04/17/91
+.\"
 .Vx
 .Dd 
 .Dt LEARN 1
