--- a/usr.bin/plot/plot.1
+++ b/usr.bin/plot/plot.1
@@ -1,10 +1,10 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)plot.1	6.7 (Berkeley) 03/14/91
+.\" %sccs.include.proprietary.roff%
 .\"
-.Vx
+.\"	@(#)plot.1	6.8 (Berkeley) 04/18/91
+.\"
 .Vx
 .Dd 
 .Dt PLOT 1
