| sed '/ATT (NEW)/d'

--- a/old/roff/troff/troff.1
+++ b/old/roff/troff/troff.1
@@ -1,4 +1,6 @@
-.\"	@(#)troff.1	6.1 (Berkeley) 04/29/85
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)troff.1	6.2 (Berkeley) 04/18/91
 .\"
 .TH TROFF 1 ""
 .AT 3
