-p doesn't take arguments

--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)mkdir.1	6.7 (Berkeley) 03/14/91
+.\"     @(#)mkdir.1	6.8 (Berkeley) 04/19/91
 .\"
 .Vx
 .Dd 
@@ -14,7 +14,8 @@
 .Nd make directories
 .Sh SYNOPSIS
 .Nm mkdir
-.Op Fl p Ar directory_name  ...
+.Op Fl p
+.Ar directory_name  ...
 .Sh DESCRIPTION
 .Nm Mkdir
 creates the directories named as operands, in the order specified,
