text changes or conversion to -mdoc (version 3)

--- a/lib/libc/gen/setjmp.3
+++ b/lib/libc/gen/setjmp.3
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)setjmp.3	6.5 (Berkeley) 04/19/91
+.\"     @(#)setjmp.3	6.6 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt SETJMP 3
@@ -127,6 +127,13 @@ versions of
 .Xr sigaction 2 ,
 .Xr sigstack 2 ,
 .Xr signal 3
+.Sh STANDARDS
+The
+.Fn setjmp
+and
+.Fn longjmp
+functions conform to
+.St -ansiC .
 .\" .Sh HISTORY
 .\ The
 .\ .Nm
