new copyright; att/bsd/shared

--- a/lib/libcompat/4.3/ecvt.3
+++ b/lib/libcompat/4.3/ecvt.3
@@ -1,4 +1,6 @@
-.\"	@(#)ecvt.3	6.3 (Berkeley) 05/17/89
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)ecvt.3	6.4 (Berkeley) 04/20/91
 .\"
 .TH ECVT 3  ""
 .AT 3
