delete last vestige of AT&T wording

--- a/lib/libm/common_source/erf.3
+++ b/lib/libm/common_source/erf.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)erf.3	6.3 (Berkeley) 04/19/91
+.\"     @(#)erf.3	6.4 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt ERF 3
@@ -39,13 +39,12 @@ function calculates the complementary error function of
 .Fa x ;
 that is
 .Fn erfc
-subtracts the result of
-the error function
+subtracts the result of the error function
 .Fn erf x
 from 1.0.
 This is useful, since for large
-.Fa x ,
-such as x = 10, 12 places disappear.
+.Fa x
+places disappear.
 .Sh SEE ALSO
 .Xr math 3
 .Sh HISTORY
@@ -53,6 +52,5 @@ The
 .Fn erf
 and
 .Fn erfc
-functions
-appeared in
+functions appeared in
 .Bx 4.3 .
