wrong copyright notice!

--- a/usr.bin/spell/spell.1
+++ b/usr.bin/spell/spell.1
@@ -1,9 +1,9 @@
-.\" Copyright (c) 1990 The Regents of the University of California.
+.\" Copyright (c) 1985 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.roff%
+.\" %sccs.include.proprietary.roff%
 .\"
-.\"	@(#)spell.1	6.3 (Berkeley) 04/18/91
+.\"	@(#)spell.1	6.4 (Berkeley) 04/20/91
 .\"
 .TH SPELL 1 ""
 .AT 3
