new copyright; att/bsd/shared

--- a/usr.bin/uucp/acucntrl/acucntrl.8
+++ b/usr.bin/uucp/acucntrl/acucntrl.8
@@ -1,6 +1,11 @@
-.\"	@(#)acucntrl.8	6.2 (Berkeley) 07/29/85
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.TH acucntrl 8C ""
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)acucntrl.8	6.3 (Berkeley) 04/24/91
+.\"
+.TH ACUCNTRL 8 ""
 .UC 6
 .SH NAME
 acucntrl \- turn around tty line between dialin and dialout
