new copyright; att/bsd/shared

--- a/usr.sbin/amd/amq/amq.8
+++ b/usr.sbin/amd/amq/amq.8
@@ -6,11 +6,11 @@
 .\" This code is derived from software contributed to Berkeley by
 .\" Jan-Simon Pendry at Imperial College, London.
 .\"
-.\" %sccs include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)amq.8	5.3 (Berkeley) 03/17/91
+.\"	@(#)amq.8	5.4 (Berkeley) 04/25/91
 .\"
-.Dd March 17, 1991
+.Dd ""
 .Dt AMQ 8
 .Os
 .Sh NAME
